# worktree-manager

./: .gitignore  .lintstagedrc  .lintstagedrc.mjs  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
.husky/: pre-push
.memory-staging/: session-2026-04-19T12-32-56-265Z-9cd72574.json  session-2026-04-19T13-31-29-814Z-9cd72574.json
docs/: COMMAND_CONTRACTS.md  MCP.md  PROJECT_OVERVIEW.md  TESTING.md  guide.html  index.html
docs/claude/: backend-state.md  dual-mode.md  terminal-architecture.md
docs/en/: guide.html  index.html
scripts/: check-i18n.mjs  command-contracts.mjs
src/: App.tsx  constants.test.ts  constants.ts  design-tokens.ts  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  target  tauri.conf.json
src-tauri/shell-integration/: bash-init.sh  bash-integration.sh  pwsh-integration.ps1  zsh-integration.sh
src-tauri/src/: cloud_client.rs  config.rs  git_ops.rs  http_origin_policy.rs  http_server.rs  lib.rs  mirror.rs  pty_manager.rs  state.rs  tls.rs  types.rs  utils.rs  wms_tunnel.rs
src-tauri/src/commands/: cloud.rs  config.rs  git.rs  mcp.rs  memory.rs  mod.rs  pty.rs  sharing.rs  system.rs  vault.rs  voice.rs  window.rs  workspace.rs  worktree.rs
src-tauri/src/http_server/: middleware.rs  routing.rs
src-tauri/src/memory/: executor.rs  mod.rs  parser.rs  prompt.rs  prompt_template.md  queue.rs  types.rs
src-tauri/tests/: devtools_config.rs  http_server_routing_smoke.rs
src/components/: AddProjectModal.tsx  AddProjectToWorktreeModal.tsx  AddWorkspaceModal.tsx  ArchiveConfirmationModal.tsx  BatchArchiveModal.tsx  BranchCombobox.tsx  ChangedFilesPanel.tsx  ContextMenus.tsx  CrashReportModal.tsx  CreatePRModal.tsx  CreateWorktreeModal.tsx  ErrorBoundary.tsx  GitOperations.test.tsx  GitOperations.tsx  GlobalDialogs.test.tsx  GlobalDialogs.tsx  Icons.tsx  MemoryDetailPanel.tsx  MobileTabBar.tsx  MobileWorktreeDetail.tsx  MobileWorktreeList.tsx  ProjectEditModal.tsx  SettingsView.tsx  StatusBar.tsx  Terminal.test.tsx  Terminal.tsx  TerminalPanel.tsx  TerminalSearchBar.tsx  Toast.tsx  UpdaterDialogs.tsx  (+8 more)
(+87 files in other folders)
