[package]
name = "worktree-manager"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "worktree_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
tauri = { version = "=2.10.2", features = [] }
tauri-plugin-opener = "=2.5.3"
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-updater = "=2.10.0"
tauri-plugin-process = "=2.3.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
git2 = "=0.20.4"
chrono = { version = "=0.4.43", features = ["serde"] }
once_cell = "=1.21.3"
portable-pty = "=0.9.0"
wait-timeout = "=0.2.1"
openssl-sys = { version = "=0.9.111", features = ["vendored"] }
log = "=0.4.29"
tauri-plugin-log = "=2.8.0"
urlencoding = "=2.1.3"
axum = { version = "=0.8.8", features = ["ws"] }
tokio = { version = "=1.49.0", features = ["full"] }
futures-util = "=0.3.31"
tower-http = { version = "=0.6.8", features = ["cors", "fs", "limit"] }
local-ip-address = "=0.6.10"
ngrok = "=0.18.0"
url = "=2.5.8"
rustls = { version = "=0.23.36", features = ["aws-lc-rs"] }
ring = "=0.17.14"
hex = "=0.4.3"
uuid = { version = "=1.20.0", features = ["v4"] }
tokio-tungstenite = { version = "=0.26.2", features = ["rustls-tls-webpki-roots"] }
base64 = "=0.22.1"
reqwest = { version = "=0.12.18", features = ["json", "rustls-tls", "stream"], default-features = false }
rcgen = "=0.13.2"
tokio-rustls = "=0.26.4"
rustls-pki-types = "=1.14.0"
hyper = { version = "=1.8.1", features = ["server", "http1"] }
hyper-util = { version = "=0.1.20", features = ["tokio"] }
rustls-pemfile = "=2.2.0"
tower = "=0.5.3"
time = "=0.3.47"
gethostname = "=1.1.0"
dirs = "6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-icons = "=0.3.0"

[dev-dependencies]
tempfile = "=3.24.0"
